# PMIS_V2

./: .env.template  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PMIS_research_paper.md  PMIS_v3_architecture.md  README.md  SECURITY.md  benchmark_chart.html  benchmark_results.json  generate_pdf.py  ground_truth_results.json  index.html  install.bat  install.sh  longmemeval_results.json  memory.html  p9_dashboard.html  pmis_flow.html  pyproject.toml  start.bat  start.sh  twitter_article.md  verify_install.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
Graph_DB/: benchmark_results.json  graph.db
examples/: claude_desktop_mcp.md  quickstart.py
memory_system/: CLAUDE.md  README.md
platform/: auth.py  db.py  requirements.txt  server.py
pmis/: __init__.py  api.py  cli.py
pmis_v2/: BOTTLENECK_REPORT.md  CLAUDE.md  INTEGRATIONS.md  REDESIGN.md  agent.py  approve.py  auth.py  claude_mcp_config.json  cli.py  daily_activity_merge.py  dashboard_server.py  health_dashboard.py  hyperparameters.yaml  launch_server.sh  links_extractor.py  mcp_server.py  orchestrator.py  reorganize_scs.py  replay_harness.py  requirements.txt  run_both_harnesses.py  server.py  time_assignment.py  wiki_renderer.py  wiki_tree_prose.py
productivity-tracker/: .env.example  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  claude_desktop_config.json  pyproject.toml
productivity-tracker/config/: deliverables.yaml  privacy.yaml  settings.yaml
productivity-tracker/daemon/: install.sh  productivity_daemon.py
productivity-tracker/daemon/monitor_ui/: index.html
productivity-tracker/scripts/: install.sh  start_tracker.sh
productivity-tracker/skills/productivity-tracker/: SKILL.md
productivity-tracker/src/agent/: activity_monitor.py  agent_detector.py  input_monitor.py  screenshot.py  tracker.py  window_monitor.py
productivity-tracker/src/matching/: contribution_tracker.py  deliverables_loader.py  matching_engine.py
productivity-tracker/src/mcp/: server.py
productivity-tracker/src/memory/: central_merge.py  daily_rollup.py  hourly_aggregator.py  pipeline_sync.py  pmis_integration.py  project_matcher.py
productivity-tracker/src/pipeline/: context_classifier.py  frame_analyzer.py  prompts.py  segmenter.py
productivity-tracker/src/storage/: chromadb_store.py  db.py  models.py
productivity-tracker/src/ui/: api.py
productivity-tracker/src/ui/dashboard/: index.html  package-lock.json  package.json
productivity-tracker/src/ui/dashboard/src/: App.tsx  api.ts  index.css  types.ts
productivity-tracker/src/ui/dashboard/src/views/: ContributionMap.tsx  DailySummary.tsx  Deliverables.tsx  Timeline.tsx  Trends.tsx
productivity-tracker/tests/: test_analyzer.py  test_matching.py  test_memory.py  test_segmenter.py
prome_installer/: __init__.py  __main__.py  paths.py  service.py  steps.py  ui.py
proxy/: README.md  package.json  tokens.example.json  worker.js  wrangler.toml
scripts/: autoresearch.py  autoresearch_v2.py  benchmark_iter.py  longmemeval_bench.py  migrate_p9.py  p9_retrieve.py  research_program.md  version.py
tests/: test_text_io_utf8.py
versions/: VERSION_REGISTRY.json
(+218 files in other folders)
