[project]
name = "productivity-tracker"
version = "0.1.0"
description = "Mac-native productivity tracker with ChatGPT Vision + PMIS v2 memory"
requires-python = ">=3.11"
dependencies = [
    # AI / Vision
    "openai>=1.0.0",

    # Storage
    "sqlalchemy>=2.0",

    # API + config
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Image processing
    "Pillow>=10.0",

    # Utilities
    "numpy>=1.24",
    "psutil>=5.9",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# Heavy deps that may fail on some Python versions — install separately
full = [
    "chromadb>=0.4.0",
    "scikit-image>=0.22",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "mcp[cli]>=1.0.0",
    "schedule>=1.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
tracker = "src.agent.tracker:main"
mcp-server = "src.mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
